CR0000: Added some fiels. REVIEWER:Rakesh

--- a/deployment/k8sdeployments/config.yaml
+++ b/deployment/k8sdeployments/config.yaml
@@ -6,9 +6,10 @@ metadata:
   name: keycloak
 spec:
   type: LoadBalancer
-  externalIPs: ["172.25.20.11"]
+  externalIPs:
+  - 172.25.20.19
   ports:
-  - name: "8081"
+  - name: '8081'
     port: 8081
     targetPort: 8081
   selector:
