--- a/ansible/collection_playbooks/galaxy-hpe.yml
+++ b/ansible/collection_playbooks/galaxy-hpe.yml
@@ -6,7 +6,7 @@
 namespace: hpe
 
 # The name of the collection. Has the same character restrictions as 'namespace'
-name: storage
+name: xp_storage
 
 # The version of the collection. Must be compatible with semantic versioning
 version: 2.2.0
