--- a/ansible/collection_playbooks/block-hpe/create_hg.yml
+++ b/ansible/collection_playbooks/block-hpe/create_hg.yml
@@ -1,6 +1,8 @@
 -
   name: Create Host Group
   hosts: localhost
+  collections:
+    - hpe.xp_storage
   gather_facts: false
   vars:
     - host_group_name: test-ansible-hg-1
