delete storage system and command device changes

--- a/ansible/collection_playbooks/block/delete_storage_system.yml
+++ b/ansible/collection_playbooks/block/delete_storage_system.yml
@@ -9,6 +9,6 @@
   tasks:
     - hv_storagesystem:
         storage_profile: '{{ storage_profile | default(omit) }}'
-        state: present
+        state: absent
       register: result
     - debug: var=result
