--- a/ansible/collection_playbooks/block/present_lun.yml
+++ b/ansible/collection_playbooks/block/present_lun.yml
@@ -20,3 +20,4 @@
           ports: '{{ ports | default(None) }}'
           luns: '{{ luns | default(None) }}'
       register: result
+    - debug: var=result
