Bug - SIEAN-605, SIEAN-606, SIEAN-607 fixed

--- a/ansible/collection_playbooks/block/delete_storage_system.yml
+++ b/ansible/collection_playbooks/block/delete_storage_system.yml
@@ -1,11 +1,11 @@
 -
-  name: Adding Storage System from storage.json
+  name: Deleting Storage System from storage.json
   hosts: localhost
   collections:
     - hitachi.storage
   gather_facts: false
   vars:
-    - storage_profile: ./storage.json
+    - storage_profile: ../storage.json
   tasks:
     - hv_storagesystem:
         storage_profile: '{{ storage_profile | default(omit) }}'
