SIEAN-594: Add/Get Storage params update SIEAN-613: Ansible reserved name used in adapters code

--- a/ansible/collection_playbooks/block-hpe/create_lun.yml
+++ b/ansible/collection_playbooks/block-hpe/create_lun.yml
@@ -8,6 +8,7 @@
     - pool_id: 6
     - size: 4GB
     - storage_serial: 12345
+    - lun_name: testsn
     - cap_saving:
        - compression
        - deduplication
@@ -18,7 +19,7 @@
         data:
           storage_pool:
             id: '{{ pool_id }}'
-          name: '{{ name  | default(omit) }}'
+          name: '{{ lun_name  | default(omit) }}'
           size: '{{ size }}'
           lun: '{{ lun | default(None) }}'
           cap_saving: '{{ cap_saving | default(None) }}'
