--- a/ansible/collection_playbooks/block/create_lun.yml
+++ b/ansible/collection_playbooks/block/create_lun.yml
@@ -9,7 +9,7 @@
     - size: 0.07GB
     - storage_serial: 123456
     - lun: 1391
-    - name: testsn
+    - lun_name: testsn
     - cap_saving:
        - compression
        - deduplication
@@ -21,7 +21,7 @@
         data:
           storage_pool:
             id: '{{ pool_id | default(None) }}'
-          name: '{{ name  | default(None) }}'
+          name: '{{ lun_name  | default(None) }}'
           size: '{{ size | default(None) }}'
           lun: '{{ lun | default(None) }}'
           cap_saving: '{{ cap_saving | default(None) }}'
