--- a/ansible/collection_playbooks/block/update_storage_pool.yml
+++ b/ansible/collection_playbooks/block/update_storage_pool.yml
@@ -6,13 +6,16 @@
   gather_facts: false
   vars:
     - pool_volumes: 
-        capacity: 20GB
+        capacity: 10GB
         parityGroupId: 1-1
+    - storage_pool_id: storagepool-c244dec0650ee83bd8d02588b6b
+    - storage_serial: 12345
   tasks:
     - hv_storagepool:
         state: present
         storage_serial: '{{ storage_serial }}'
         data:
+          storage_pool_id: '{{ storage_pool_id | default(omit) }}'
           pool_volumes: '{{ pool_volumes }}'
       register: result
     - debug: var=result.storagePool
