--- a/ansible/collection_playbooks/block/update_storage_replication_tc_resync.yml
+++ b/ansible/collection_playbooks/block/update_storage_replication_tc_resync.yml
@@ -1,5 +1,5 @@
 -
-  name: Split TrueCopy storage replication
+  name: Resync TrueCopy storage replication
   hosts: localhost
   collections:
     - hitachi.storage
@@ -9,10 +9,10 @@
     - storage_pool_id: storagepool-c244dec065003ab5ee83bd8d02588b6b
     - storage_serial: 12345
   tasks:
-    - hv_storagereplication:
+    - hv_storage_replication:
         state: present
         copy_type: tc
-        action_type: split
+        action_type: resync
         storage_serial: '{{ storage_serial }}'
         data:
           storage_pool_id: '{{ storage_pool_id }}'
