--- a/ansible/collection_playbooks/block/update_storage_replication_tc_swap_split.yml
+++ b/ansible/collection_playbooks/block/update_storage_replication_tc_swap_split.yml
@@ -9,7 +9,7 @@
     - storage_pool_id: storagepool-c244dec065003ab5ee83bd8d02588b6b
     - storage_serial: 12345
   tasks:
-    - hv_storagereplication:
+    - hv_storage_replication:
         state: present
         copy_type: tc
         action_type: swapSplit
