--- a/ansible/collection_playbooks/block/delete_storagereplication_tc.yml
+++ b/ansible/collection_playbooks/block/delete_storagereplication_tc.yml
@@ -1,11 +1,11 @@
 -
-  name: Testing Delete Storage Replication 
+  name: TC Delete Storage Replication 
   hosts: localhost
   collections:
     - hitachi.storage
   gather_facts: false
   vars:
-    - repl_pair_id: replpair-447d3c6954efb460e6f47e331615176f
+    - pvol_id: 121
     - storage_serial: 12345
   tasks:
     - hv_storagereplication:
@@ -13,7 +13,6 @@
         repl_type: tc
         storage_serial: '{{ storage_serial }}'
         data:
-          storage_pool_id: '{{ storage_pool_id }}'
-          repl_pair_id: '{{ repl_pair_id }}'
+          pvol_id: '{{ pvol_id }}'
       register: result
     - debug: var=result
