--- a/ansible/collection_playbooks/block/delete_storagereplication_tc.yml
+++ b/ansible/collection_playbooks/block/delete_storagereplication_tc.yml
@@ -15,4 +15,4 @@
         data:
           pvol_id: '{{ pvol_id }}'
       register: result
-    - debug: var=result
+    - debug: var=result.storageReplication
