Build 2.3.0.3 with features Dynamic Pool, TC and GAD pair

--- a/ansible/collection_playbooks/block/get_all_storage_pool.yml
+++ b/ansible/collection_playbooks/block/get_all_storage_pool.yml
@@ -1,5 +1,5 @@
 - 
-  name: Testing Get All Storage Pool details
+  name: Get All Storage Pool details
   hosts: localhost
   collections:
     - hitachi.storage
