--- a/ansible/collection_playbooks/block/get_all_storage_replication.yml
+++ b/ansible/collection_playbooks/block/get_all_storage_replication.yml
@@ -1,5 +1,5 @@
 - 
-  name: Testing Get All Storage Replication details
+  name: Get All Storage Replication details
   hosts: localhost
   collections:
     - hitachi.storage
