--- a/ansible/collection_playbooks/block/create_dynamic_pool.yml
+++ b/ansible/collection_playbooks/block/create_dynamic_pool.yml
@@ -1,5 +1,5 @@
 -
-  name: Create Storage Pool
+  name: Create Dynamic Pool
   hosts: localhost
   collections:
     - hitachi.storage
@@ -24,5 +24,5 @@
           warning_threshold_rate: '{{ warning_threshold_rate | default(None)}}'
           pool_volumes: '{{ pool_volumes }}'
       register: result
-    - debug: var=result.storagePool
+    - debug: var=result.dynamicPool
 
