--- a/ansible/collection_playbooks/block/create_storagereplication_tc.yml
+++ b/ansible/collection_playbooks/block/create_storagereplication_tc.yml
@@ -6,10 +6,10 @@
   gather_facts: false
   vars:
     - primary_lun_id: 1791
-    - primary_serial_no: 123456
-    - secondary_pool_id: 9
-    - secondary_serial_no: 123457
-    - secondary_host_group:
+    - primary_storage_serial_no: 123456
+    - secondary_storage_pool_id: 9
+    - secondary_storage_serial_no: 123457
+    - secondary_storage_host_group:
         - name: test-ansible-hg-tc
         - port: CL1-A
   tasks:
@@ -18,9 +18,9 @@
         repl_type: tc
         data:
           primary_lun_id: '{{ primary_lun_id | default(None) }}'
-          primary_serial_no: '{{ primary_serial_no | default(None) }}'
-          secondary_pool_id: '{{ secondary_pool_id | default(None) }}'
-          secondary_serial_no: '{{ secondary_serial_no | default(None) }}'
-          secondary_host_group: '{{ secondary_host_group | default(None) }}'
+          primary_storage_serial_no: '{{ primary_storage_serial_no | default(None) }}'
+          secondary_storage_pool_id: '{{ secondary_storage_pool_id | default(None) }}'
+          secondary_storage_serial_no: '{{ secondary_storage_serial_no | default(None) }}'
+          secondary_storage_host_group: '{{ secondary_storage_host_group | default(None) }}'
       register: result
     - debug: var=result.storageReplication
