--- a/ansible/collection_playbooks/block/storagereplication_gad_resync.yml
+++ b/ansible/collection_playbooks/block/storagereplication_gad_resync.yml
@@ -6,13 +6,13 @@
   gather_facts: false
   vars:
     - pvol_id: 121
-    - storage_serial: 12345
+    - primary_storage_serial_no: 12345
   tasks:
     - hv_storagereplication:
         state: present
         repl_type: gad
         action_type: resync
-        storage_serial: '{{ storage_serial }}'
+        primary_storage_serial_no: '{{ primary_storage_serial_no }}'
         data:
           pvol_id: '{{ pvol_id }}'
       register: result
