Build 02.3.0.5: Bug Fixes: 685, 682, 681, 680, 677, 670, 663, 660, 651

--- a/ansible/collection_playbooks/block/create_tc.yml
+++ b/ansible/collection_playbooks/block/create_tc.yml
@@ -1,13 +1,12 @@
 -
-  name: Create Gad storage replication
+  name: Create TrueCopy pair
   hosts: localhost
   collections:
     - hitachi.storage
   gather_facts: false
   vars:
     - primary_lun_id: 1791
-    - primary_storage_serial_no: 334566
-    - quorum_disk_id: 1
+    - primary_storage_serial_no: 123456
     - secondary_storage_pool_id: 9
     - secondary_storage_serial_no: 123457
     - secondary_storage_host_group:
@@ -16,11 +15,10 @@
   tasks:
     - hv_storagereplication:
         state: present
-        repl_type: gad
+        repl_type: tc
         data:
           primary_lun_id: '{{ primary_lun_id | default(None) }}'
           primary_storage_serial_no: '{{ primary_storage_serial_no | default(None) }}'
-          quorum_disk_id: '{{ quorum_disk_id  | default(None) }}'
           secondary_storage_pool_id: '{{ secondary_storage_pool_id | default(None) }}'
           secondary_storage_serial_no: '{{ secondary_storage_serial_no | default(None) }}'
           secondary_storage_host_group: '{{ secondary_storage_host_group | default(None) }}'
