--- a/ansible/collection_playbooks/block/create_gad.yml
+++ b/ansible/collection_playbooks/block/create_gad.yml
@@ -1,12 +1,13 @@
 -
-  name: Create TrueCopy storage replication
+  name: Create Gad pair
   hosts: localhost
   collections:
     - hitachi.storage
   gather_facts: false
   vars:
     - primary_lun_id: 1791
-    - primary_storage_serial_no: 123456
+    - primary_storage_serial_no: 334566
+    - quorum_disk_id: 1
     - secondary_storage_pool_id: 9
     - secondary_storage_serial_no: 123457
     - secondary_storage_host_group:
@@ -15,10 +16,11 @@
   tasks:
     - hv_storagereplication:
         state: present
-        repl_type: tc
+        repl_type: gad
         data:
           primary_lun_id: '{{ primary_lun_id | default(None) }}'
           primary_storage_serial_no: '{{ primary_storage_serial_no | default(None) }}'
+          quorum_disk_id: '{{ quorum_disk_id  | default(None) }}'
           secondary_storage_pool_id: '{{ secondary_storage_pool_id | default(None) }}'
           secondary_storage_serial_no: '{{ secondary_storage_serial_no | default(None) }}'
           secondary_storage_host_group: '{{ secondary_storage_host_group | default(None) }}'
