--- a/ansible/collection_playbooks/block/get_dynamic_pool.yml
+++ b/ansible/collection_playbooks/block/get_dynamic_pool.yml
@@ -13,5 +13,5 @@
         data:
           pool_id: '{{ pool_id | default(omit) }}'
       register: result
-    - debug: var=result.dynamicPool
+    - debug: var=result.storagePool
 
