--- a/ansible/collection_playbooks/block/tc_split.yml
+++ b/ansible/collection_playbooks/block/tc_split.yml
@@ -1,5 +1,5 @@
 -
-  name: Resync TrueCopy storage replication
+  name: Split TrueCopy
   hosts: localhost
   collections:
     - hitachi.storage
@@ -11,7 +11,7 @@
     - hv_storagereplication:
         state: present
         repl_type: tc
-        action_type: resync
+        action_type: split
         data:
           pvol_id: '{{ pvol_id }}'
           primary_storage_serial_no: '{{ primary_storage_serial_no }}'
