--- a/ansible/collection_playbooks/block/gad_resync.yml
+++ b/ansible/collection_playbooks/block/gad_resync.yml
@@ -1,18 +1,19 @@
 -
-  name: GAD Delete Storage Replication 
+  name: Resync Gad
   hosts: localhost
   collections:
     - hitachi.storage
   gather_facts: false
   vars:
     - pvol_id: 121
-    - storage_serial: 12345
+    - primary_storage_serial_no: 12345
   tasks:
     - hv_storagereplication:
-        state: absent
+        state: present
         repl_type: gad
-        storage_serial: '{{ storage_serial }}'
+        action_type: resync
         data:
           pvol_id: '{{ pvol_id }}'
+          primary_storage_serial_no: '{{ primary_storage_serial_no }}'
       register: result
     - debug: var=result.storageReplication
