get gad and tc yml added

--- a/ansible/collection_playbooks/block/create_dynamic_pool.yml
+++ b/ansible/collection_playbooks/block/create_dynamic_pool.yml
@@ -24,5 +24,5 @@
           warning_threshold_rate: '{{ warning_threshold_rate | default(None)}}'
           pool_volumes: '{{ pool_volumes }}'
       register: result
-    - debug: var=result.dynamicPool
+    - debug: var=result.storagePool
 
