--- a/ansible/collection_playbooks/block/dynamic_pool_expand.yml
+++ b/ansible/collection_playbooks/block/dynamic_pool_expand.yml
@@ -18,5 +18,5 @@
           pool_id: '{{ pool_id | default(omit) }}'
           pool_volumes: '{{ pool_volumes }}'
       register: result
-    - debug: var=result.dynamicPool
+    - debug: var=result.storagePool
 
