--- a/ansible/collection_playbooks/block/delete_gad.yml
+++ b/ansible/collection_playbooks/block/delete_gad.yml
@@ -6,13 +6,13 @@
   gather_facts: false
   vars:
     - pvol_id: 121
-    - storage_serial: 12345
+    - primary_storage_serial_no: 12345
   tasks:
     - hv_storagereplication:
         state: absent
         repl_type: gad
-        storage_serial: '{{ storage_serial }}'
         data:
           pvol_id: '{{ pvol_id }}'
+          primary_storage_serial_no: '{{ primary_storage_serial_no }}'
       register: result
     - debug: var=result.storageReplication
