Resource Group Build

--- a/ansible/collection_playbooks/block/delete_hg_resourcegroup.yml
+++ b/ansible/collection_playbooks/block/delete_hg_resourcegroup.yml
@@ -1,5 +1,5 @@
 -
-  name: Remove Host Group from resource group
+  name: Delete Host Group from resource group
   hosts: localhost
   collections:
     - hitachi.storage
