--- a/ansible/collection_playbooks/block/add_hg_resourcegroup.yml
+++ b/ansible/collection_playbooks/block/add_hg_resourcegroup.yml
@@ -1,21 +1,21 @@
 -
-  name: Add Lun to resource group
+  name: Add Host Group to resource group
   hosts: localhost
   collections:
     - hitachi.storage
   gather_facts: false
   vars:
     - storage_serial_from: 123456
-    - ldevIds:
-        - 121
-        - 122
+    - host_group:
+        - name: test-ansible-hg-tc
+        - port: CL1-A
     - storage_serial_to: 123457
   tasks:
     - hv_resourcegroup:
         state: present
         storage_serial_from: '{{ storage_serial_from | default(None) }}'
         data:
-          ldevIds: '{{ ldevIds }}'
+          host_group: '{{ host_group }}'
           storage_serial_to: '{{ storage_serial_to }}'
       register: result
     - debug: var=result.resourceGroup
