--- a/ansible/collection_playbooks/block/get_all_resourcegroup.yml
+++ b/ansible/collection_playbooks/block/get_all_resourcegroup.yml
@@ -1,16 +1,14 @@
 - 
-  name: Get Resource Group details
+  name: Get All Resource Group details
   hosts: localhost
   collections:
     - hitachi.storage
   gather_facts: false
   vars:
     - primary_storage_serial_no: 123456
-    - secondary_storage_serial_no: 123457
   tasks:
     - hv_storagereplication_facts:
         primary_storage_serial_no: '{{ primary_storage_serial_no }}'
         data:
-          secondary_storage_serial_no: '{{ secondary_storage_serial_no }}'
       register: result
     - debug: var=result.resourceGroup
