--- a/ansible/collection_playbooks/block/create_dynamic_pool.yml
+++ b/ansible/collection_playbooks/block/create_dynamic_pool.yml
@@ -7,7 +7,7 @@
   vars:
     - storage_pool_name: test-pool
     - type: HDP
-    - deplecation_threshold_rate: 80
+    - depletionThresholdRate: 80
     - warning_threshold_rate: 70
     - pool_volumes: 
         capacity: 20GB
@@ -20,7 +20,7 @@
         data:
           storage_pool_name: '{{ storage_pool_name }}'
           type: '{{ type }}'
-          deplecation_threshold_rate: '{{ deplecation_threshold_rate | default(None)}}'
+          depletionThresholdRate: '{{ depletionThresholdRate | default(None)}}'
           warning_threshold_rate: '{{ warning_threshold_rate | default(None)}}'
           pool_volumes: '{{ pool_volumes }}'
       register: result
